--- a/01. PARTIE LEGISLATIVE/Article L1113-1 - 23086394.md
+++ b/01. PARTIE LEGISLATIVE/Article L1113-1 - 23086394.md
@@ -1,19 +1,20 @@
 # Article L1113-1
 
-Dans l'aire de compétence des autorités organisatrices de transports urbains, les personnes dont les ressources sont égales
-ou inférieures au plafond fixé en application de l'article L. 861-1 du code de la sécurité sociale, bénéficient d'une
-réduction tarifaire d'au moins 50 % sur leurs titres de transport ou d'une aide équivalente. La réduction s'applique quel que
-soit le lieu de résidence de l'usager.
+Dans l'aire de compétence des autorités organisatrices de la mobilité et, dans la région d'Ile-de-France, dans l'aire de
+compétence du Syndicat des transports d'Ile-de-France, les personnes dont les ressources sont égales ou inférieures au
+plafond fixé en application de l'article L. 861-1 du code de la sécurité sociale, bénéficient d'une réduction tarifaire d'au
+moins 50 % sur leurs titres de transport ou d'une aide équivalente. La réduction s'applique quel que soit le lieu de
+résidence de l'usager.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2000-1208 du 13 décembre 2000 - art. 123 (VT)
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
-	  - Code de la sécurité sociale. - art. L861-1 (V)
+	  - Code de la sécurité sociale. - art. L861-1
 
 	**Codifié par**:
 
