--- a/01. PARTIE LEGISLATIVE/Article L1213-3-1 - 28528787.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-1 - 28528787.md
@@ -7,13 +7,17 @@ et la billettique.
 
 Ce schéma assure la cohérence des services de transport public et de mobilité offerts aux usagers sur le territoire régional
 dans l'objectif d'une complémentarité des services et des réseaux, dans le respect des compétences de chacune des autorités
-organisatrices de transport du territoire. 
+organisatrices de transport du territoire. Il assure la coordination des services de transport organisés par les différentes
+autorités organisatrices de transport au sein des agglomérations de plus de 100 000 habitants, au sens de l'article L. 221-2
+du code de l'environnement. 
 
 Il définit les principes guidant l'articulation entre les différents modes de déplacement, notamment en ce qui concerne la
-mise en place de pôles d'échange. 
+mise en place de pôles d'échange. Il tient compte, en particulier, des besoins de déplacement quotidien entre le domicile et
+le lieu de travail et assure la cohérence des dispositions des plans de déplacements urbains élaborés sur des périmètres de
+transport urbain limitrophes.
 
 Il prévoit les mesures de nature à assurer une information des usagers sur l'ensemble de l'offre de transports, à permettre
-la mise en place de tarifs donnant accès à plusieurs modes de transport et la distribution des billets correspondants.
+la mise en place de tarifs donnant accès à plusieurs modes de transport et la distribution des billets correspondants. 
 
 Le schéma régional de l'intermodalité comporte un schéma régional des gares routières, qui indique la localisation des gares
 routières et définit les éléments principaux de leurs cahiers des charges. 
@@ -24,10 +28,6 @@ maîtres d'ouvrage peuvent être publics ou privés.
 
 **Liens relatifs à cet article**
 
-	**Modifié par**:
-
-	  - Loi n°2015-990 du 6 août 2015 - art. 10
-
 	**Cité par**:
 
 	  - Loi n°2015-991 du 7 août 2015 - art. 13 (V)
@@ -35,6 +35,12 @@ maîtres d'ouvrage peuvent être publics ou privés.
 	  - Code des transports - art. L1213-4-1 (V)
 	  - Code des transports - art. L2123-4 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+	  - Loi n°2015-992 du 17 août 2015 - art. 54 (V)
+
 	**Cite**:
 
-	  - Code des transports - art. L1221-1
+	  - Code de l'environnement - art. L221-2
+	  - Code des transports - art. L1221-1 (V)
