--- a/01. PARTIE LEGISLATIVE/Article L1231-9 - 23085755.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-9 - 23085755.md
@@ -1,17 +1,21 @@
 # Article L1231-9
 
-Les dispositions propres aux dessertes locales de transports publics routiers non urbains comprises à l'intérieur d'un
-périmètre de transports urbains figurent aux articles L. 3111-4 à L. 3111-6. 
+Les dispositions propres aux dessertes locales de transports publics routiers non urbains comprises          dans le ressort
+territorial d'une autorité organisatrice de la mobilité figurent aux articles L. 3111-4 à L. 3111-6. 
 
 Les dispositions propres aux dessertes locales de transports ferroviaires et guidés établies par les départements et
-comprises à l'intérieur d'un périmètre de transports urbains figurent à l'article L. 2121-10.
+comprises          dans le ressort territorial d'une autorité organisatrice de la mobilité figurent à l'article L. 2121-10.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+
 	**Cite**:
 
-	  - Code des transports - art. L2121-10 (VD)
-	  - Code des transports - art. L3111-4 (VD)
+	  - Code des transports - art. L2121-10 (V)
+	  - Code des transports - art. L3111-4 (V)
 
 	**Codifié par**:
 
