--- a/01. PARTIE LEGISLATIVE/Article L1241-1 - 23085735.md
+++ b/01. PARTIE LEGISLATIVE/Article L1241-1 - 23085735.md
@@ -2,7 +2,8 @@
 
 Le Syndicat des transports d'Ile-de-France est l'autorité organisatrice des services de transports publics réguliers de
 personnes dans la région Ile-de-France, y compris des services de transports publics réguliers de personnes fluviaux, sous
-réserve des pouvoirs dévolus à l'Etat en matière de police de la navigation. 
+réserve des pouvoirs dévolus à l'Etat en matière de police de la navigation. Lorsqu'ils sont routiers ou guidés, les services
+de transport public réguliers de personnes sont urbains ou non urbains, au sens du II de l'article L. 1231-2. 
 
 Le syndicat peut y organiser des services de transports à la demande. 
 
@@ -42,10 +43,11 @@ L. 1231-16.
 
 	**Modifié par**:
 
-	  - Loi n°2014-58 du 27 janvier 2014 - art. 18
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L1231-1
-	  - Code des transports - art. L1231-1-14 (T)
-	  - Code des transports - art. L1231-8
+	  - Code des transports - art. L1231-1 (V)
+	  - Code des transports - art. L1231-14 (V)
+	  - Code des transports - art. L1231-2 (V)
+	  - Code des transports - art. L1231-8 (V)
