--- a/01. PARTIE LEGISLATIVE/Article L2112-1-1 - 29332583.md
+++ b/01. PARTIE LEGISLATIVE/Article L2112-1-1 - 29332583.md
@@ -1,7 +1,7 @@
 # Article L2112-1-1
 
 Sans préjudice des dispositions du chapitre Ier du présent titre, les régions sont compétentes pour créer ou exploiter des
-infrastructures de transport ferré ou guidé d'intérêt régional.
+infrastructures de transport ferré ou guidé d'intérêt local et  régional.
 
 Pour l'application du présent article, l'intérêt régional se comprend étendu aux départements limitrophes, sous réserve de
 l'accord des conseils régionaux concernés.
@@ -10,9 +10,9 @@ Le présent article n'est applicable ni à la région d'Ile-de-France, ni à la 
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 8
+	  - Loi n°2015-991 du 7 août 2015 - art. 17 (V)
 
 	**Cité par**:
 
