--- a/01. PARTIE LEGISLATIVE/Article L2121-10 - 23084612.md
+++ b/01. PARTIE LEGISLATIVE/Article L2121-10 - 23084612.md
@@ -1,8 +1,8 @@
 # Article L2121-10
 
-A l'intérieur du périmètre de transports urbains mentionné aux articles L. 1231-4, L. 1231-5 et L. 1231-7, les dessertes
-locales des transports ferroviaires ou guidés établis par le département ou la région sont créées ou modifiées en accord avec
-l'autorité compétente pour l'organisation des transports urbains. 
+Les dessertes locales des transports ferroviaires ou guidés établis par une autorité organisatrice de transport autre que
+l'autorité organisatrice de la mobilité territorialement compétente sont créées ou modifiées après information de cette
+dernière.
 
 Les dispositions du précédent alinéa ne s'appliquent pas à la région Ile-de-France.
 
@@ -14,16 +14,11 @@ Les dispositions du précédent alinéa ne s'appliquent pas à la région Ile-de
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 8
-
-	**Cite**:
-
-	  - Code des transports - art. L1231-1
-	  - Code des transports - art. L1231-7
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
-	  - Code des transports - art. L1231-9 (VD)
+	  - Code des transports - art. L1231-9 (V)
 	  - Code des transports - art. L2311-1 (V)
 	  - Code des transports - art. L2331-1 (V)
 	  - Code des transports - art. L2341-1 (V)
