--- a/01. PARTIE LEGISLATIVE/Article L3111-5 - 23083998.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-5 - 23083998.md
@@ -1,21 +1,28 @@
 # Article L3111-5
 
-Sans préjudice des dispositions du premier alinéa de l'article L. 3111-8, en cas de création ou de modification d'un
-périmètre de transports urbains incluant des services de transports non urbains, réguliers ou à la demande, et dans un délai
-de six mois à compter de cette création ou de cette modification, l'autorité compétente pour l'organisation des transports
-urbains est substituée à l'autorité organisatrice de transports antérieurement compétente dans l'ensemble de ses droits et
-obligations résultant des conventions passées pour l'exécution des services de transport intégralement effectués dans le
-périmètre de transports urbains. 
+Sans préjudice du premier alinéa de l'article L. 3111-8, en cas de création d'un établissement public de coopération
+intercommunale à fiscalité propre compétent en matière de mobilité, ou de modification du ressort territorial d'un
+établissement public de coopération intercommunale à fiscalité propre compétent en matière de mobilité, entraînant
+l'inclusion de services de transport public existants, réguliers ou à la demande, organisés par une région, un département ou
+un syndicat mixte, l'établissement public de coopération intercommunale à fiscalité propre compétent en matière de mobilité
+est substitué à l'autorité organisatrice de transport antérieurement compétente dans l'ensemble de ses droits et obligations
+pour l'exécution des services de transport publics désormais intégralement effectués sur son ressort territorial. Cette
+substitution intervient dans un délai d'un an à compter de cette création ou modification. 
 
-Lorsqu'une décision de l'autorité compétente pour l'organisation des transports urbains a pour objet ou pour effet de
-supprimer une desserte ou d'en modifier les conditions d'exploitation, cette autorité en définit les conditions de mise en
-œuvre conjointement avec l'exploitant et l'autorité compétente pour l'organisation des transports non urbains de personnes.
+Une convention entre les autorités organisatrices concernées fixe les modalités du transfert et les conditions de financement
+des services de transport non urbains transférés, en tenant compte notamment d'une éventuelle modification du périmètre de
+l'assiette du versement transport. En cas de litige, le second alinéa de l'article L. 3111-8 s'applique aux procédures
+d'arbitrage. 
+
+Si l'autorité organisatrice de la mobilité créée ou dont le ressort territorial est modifié ne relève pas de la catégorie des
+établissements publics de coopération intercommunale à fiscalité propre, l'autorité organisatrice de la mobilité peut se
+substituer aux autres autorités organisatrices de transports après accord entre les parties.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 27 (VT), alinéas 5 et 8
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
@@ -23,7 +30,7 @@ supprimer une desserte ou d'en modifier les conditions d'exploitation, cette aut
 
 	**Cite**:
 
-	  - Code des transports - art. L3111-8 (V)
+	  - Code des transports - art. L3111-8 (VD)
 
 	**Codifié par**:
 
