--- a/01. PARTIE LEGISLATIVE/Article L3111-7 - 23083991.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-7 - 23083991.md
@@ -9,7 +9,7 @@ L'autorité compétente de l'Etat consulte le département, dans des conditions 
 décision susceptible d'entraîner une modification substantielle des besoins en matière de transports scolaires.
 
 Toutefois, à l'intérieur des périmètres de transports urbains existant au 1er septembre 1984, cette responsabilité est
-exercée par l'autorité compétente pour l'organisation des transports urbains.
+exercée par l'autorité compétente pour l'organisation de la mobilité.
 
 Le transfert des ressources équivalentes aux dépenses supportées par l'Etat au titre des bourses de fréquentation scolaire,
 au titre du financement des frais de premier établissement des services de transport réservés aux élèves, des frais de
@@ -34,10 +34,7 @@ décret en Conseil d'Etat.
 	  - Code des transports - art. R3131-2 (V)
 	  - Code des transports - art. R3211-14 (VD)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'éducation - art. L213-11 (M), alinéas 1 à 4 et 7, art. L213-12 (M), alinéa 3
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+	  - Loi n°2015-991 du 7 août 2015 - art. 15 (V)
