--- a/01. PARTIE LEGISLATIVE/Article L5753-2 - 23078684.md
+++ b/01. PARTIE LEGISLATIVE/Article L5753-2 - 23078684.md
@@ -1,13 +1,14 @@
 # Article L5753-2
 
-Les dispositions des articles L. 5314-3, L. 5334-6-1 à L. 5334-6-3, L. 5343-1 à L. 5343-23 et L. 5344-1 à L. 5344-4, L.
-5351-4 ne sont pas applicables à Saint-Pierre-et-Miquelon.
+Les dispositions des articles    
+L. 5334-6-1 à L. 5334-6-3, L. 5343-1 à L. 5343-23 et L. 5344-1 à L. 5344-4, L. 5351-4 ne sont pas applicables à Saint-Pierre-
+et-Miquelon.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Ordonnance n°2013-139 du 13 février 2013 - art. 1
+	  - Loi n°2015-991 du 7 août 2015 - art. 22 (V)
 
 	**Cite**:
 
