--- a/01. PARTIE LEGISLATIVE/Article L5754-1 - 23078680.md
+++ b/01. PARTIE LEGISLATIVE/Article L5754-1 - 23078680.md
@@ -6,9 +6,8 @@ et-Miquelon.
 Les articles L. 5431-2 et L. 5431-3 sont applicables aux transports maritimes réguliers publics de personnes pour la desserte
 de ports ou appontements du littoral. 
 
-La collectivité territoriale organisatrice est celle visée à l'article L. 5431-1 ou, lorsqu'un périmètre de transport urbain
-a été constitué en application des dispositions de la section 1 du chapitre Ier du titre III du livre II de la première
-partie, les autorités mentionnées aux premier et troisième alinéas du même article.
+La collectivité territoriale organisatrice est celle visée à l'article L. 5431-1 ou l'autorité organisatrice de la mobilité
+mentionnée au titre III du livre II de la première partie.
 
 **Liens relatifs à cet article**
 
@@ -18,9 +17,10 @@ partie, les autorités mentionnées aux premier et troisième alinéas du même 
 
 	**Modifié par**:
 
-	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
+	  - Code des transports - art. L5421-13 (V)
 	  - Code des transports - art. L5431-1
 	  - Code des transports - art. L5431-2
