--- a/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
@@ -10,11 +10,10 @@ code de l'urbanisme et les gestionnaires de voirie sont consultés à leur deman
 
 Le projet de schéma régional de l'intermodalité, assorti des avis des conseils départementaux des départements inclus dans la
 région, des autorités organisatrices de la mobilité ainsi que des observations formulées par les personnes associées à son
-élaboration, est mis à la disposition du public dans les conditions prévues à l'article L. 120-1 du code de l'environnement. 
+élaboration, est mis à la disposition du public dans les conditions prévues à l'article L. 120-1 du code de l'environnement.
 
-Le projet est arrêté par le conseil régional après avis favorable des conseils départementaux des départements inclus dans la
-région représentant au moins la moitié de la population régionale et des organes délibérants des autorités organisatrices de
-la mobilité représentant au moins la moitié de la population des périmètres de transports urbains de la région. 
+Le projet est arrêté par le conseil régional après avis favorable des organes délibérants des autorités organisatrices de la
+mobilité représentant au moins la moitié de la population des ressorts territoriaux de ces dernières dans  la région. 
 
 En l'absence de réponse de la collectivité publique dans un délai de trois mois à compter de la transmission du projet de
 schéma, son avis est réputé favorable. 
@@ -25,12 +24,12 @@ Il fait l'objet d'une évaluation tous les cinq ans et il est, si nécessaire, r
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-58 du 27 janvier 2014 - art. 6
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L122-4 (V)
-	  - Code de l'environnement - art. L120-1 (V)
-	  - Code des transports - art. L1231-10 (V)
+	  - Code de l'urbanisme - art. L122-4
+	  - Code de l'environnement - art. L120-1
+	  - Code des transports - art. L1231-10
