--- a/01. PARTIE LEGISLATIVE/Article L1214-1 - 23086203.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-1 - 23086203.md
@@ -1,14 +1,9 @@
 # Article L1214-1
 
 Le plan de déplacements urbains détermine les principes régissant l'organisation du transport de personnes et de
-marchandises, la circulation et le stationnement dans le périmètre de transports urbains défini par les dispositions de la
-section 2 du chapitre unique du titre III du présent livre.
+marchandises, la circulation et le stationnement dans le ressort territorial de l'autorité organisatrice de la mobilité.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28 (VT), alinéa 1, phrase 1
 
 	**Cité par**:
 
@@ -28,6 +23,10 @@ section 2 du chapitre unique du titre III du présent livre.
 	  - Code des transports - art. L2123-4 (V)
 	  - Code des transports - art. R1214-1 (V)
 	  - Code général des collectivités territoriales - art. L4251-5 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Codifié par**:
 
