--- a/01. PARTIE LEGISLATIVE/Article L1214-14 - 23086107.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-14 - 23086107.md
@@ -1,7 +1,7 @@
 # Article L1214-14
 
-Le plan de déplacements urbains est élaboré ou révisé à l'initiative de l'autorité compétente pour l'organisation des
-transports urbains sur le territoire qu'il couvre. 
+Le plan de déplacements urbains est élaboré ou révisé à l'initiative de l'autorité compétente pour l'organisation de la
+mobilité  sur le territoire qu'il couvre. 
 
 Les services de l'Etat, de même que les régions et les départements au titre de leur qualité d'autorités organisatrices de
 transport ou de gestionnaires d'un réseau routier et, le cas échéant, le président de l'établissement public prévu à
@@ -11,18 +11,6 @@ Les représentants des professions et des usagers des transports ainsi que des a
 la mobilité est réduite, les chambres de commerce et d'industrie et les associations agréées de protection de l'environnement
 mentionnées à l'article L. 141-1 du code de l'environnement sont consultés, à leur demande, sur le projet.
 
-**Nota:**
-
-Ordonnance n° 2012-11 du 5 janvier 2012 article 19 : Les présentes dispositions entrent en vigueur à une date déterminée par
-décret en Conseil d'Etat et au plus tard le 1er janvier 2013. Toutefois, les dispositions en vigueur antérieurement à
-l'entrée en vigueur de l'ordonnance demeurent applicables :
-
-- aux procédures d'élaboration et de révision des schémas de cohérence territoriale et des plans locaux d'urbanisme
-prescrites à cette même date ;
-
-- aux procédures de modification des schémas de cohérence territoriale et des plans locaux d'urbanisme lorsque le projet de
-modification a été notifié aux personnes publiques associées à la date d'entrée en vigueur de l'ordonnance.
-
 **Liens relatifs à cet article**
 
 	**Codifié par**:
@@ -31,11 +19,11 @@ modification a été notifié aux personnes publiques associées à la date d'en
 
 	**Modifié par**:
 
-	  - Loi n°2014-366 du 24 mars 2014 - art. 129 (V)
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L122-4 (V)
+	  - Code de l'urbanisme - art. L122-4
 	  - Code de l'environnement - art. L141-1
 
 	**Cité par**:
