--- a/01. PARTIE LEGISLATIVE/Article L1214-18 - 23086094.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-18 - 23086094.md
@@ -1,12 +1,12 @@
 # Article L1214-18
 
-Le plan de déplacements urbains est mis en œuvre par l'autorité organisatrice des transports urbains.
+Le plan de déplacements urbains est mis en œuvre par l'autorité organisatrice de la mobilité.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-2 (M), alinéa 4, phrase 1
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Codifié par**:
 
