--- a/01. PARTIE LEGISLATIVE/Article L1214-19 - 23086085.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-19 - 23086085.md
@@ -3,18 +3,18 @@
 La compétence de l'établissement public de coopération intercommunale mentionné à l'article L. 122-4 du code de l'urbanisme
 peut, s'il y a lieu et dans les conditions prévues par le code général des collectivités territoriales, être élargie à
 l'élaboration d'un plan de déplacements urbains couvrant l'ensemble du périmètre relevant de la compétence de cet
-établissement public, sous réserve que ce périmètre inclue la totalité du ou des périmètres de transports urbains situés sur
-son territoire.
+établissement public, sous réserve que ce périmètre inclue la totalité du ou des ressorts territoriaux des autorités
+organisatrices de la mobilité situés sur son territoire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-2-1 (VT), alinéa 1
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L122-4 (V)
+	  - Code de l'urbanisme - art. L122-4
 
 	**Cité par**:
 
