--- a/01. PARTIE LEGISLATIVE/Article L1214-2 - 23086200.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-2 - 23086200.md
@@ -31,11 +31,11 @@ catégories d'usagers, notamment tendant à favoriser le stationnement des rési
 autopartage " tel que défini par voie réglementaire ; 
 
 8° L'organisation des conditions d'approvisionnement de l'agglomération nécessaires aux activités commerciales et
-artisanales, en mettant en cohérence les horaires de livraison et les poids et dimensions des véhicules de livraison au sein
-du périmètre des transports urbains, en prenant en compte les besoins en surfaces nécessaires aux livraisons pour limiter la
-congestion des voies et aires de stationnement, en améliorant l'utilisation des infrastructures logistiques existantes,
-notamment celles situées sur les voies de pénétration autres que routières et en précisant la localisation des
-infrastructures à venir, dans une perspective multimodale ; 
+artisanales, en mettant en cohérence les horaires de livraison et les poids et dimensions des véhicules de livraison dans le
+ressort territorial de l'autorité organisatrice de la mobilité, en prenant en compte les besoins en surfaces nécessaires aux
+livraisons pour limiter la congestion des voies et aires de stationnement, en améliorant l'utilisation des infrastructures
+logistiques existantes, notamment celles situées sur les voies de pénétration autres que routières et en précisant la
+localisation des infrastructures à venir, dans une perspective multimodale ; 
 
 9° L'amélioration du transport des personnels des entreprises et des collectivités publiques en incitant ces dernières à
 prévoir un plan de mobilité et à encourager l'utilisation par leur personnel des transports en commun et le recours au
@@ -49,9 +49,9 @@ véhicules électriques ou hybrides rechargeables.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28 (VT), alinéa 1, phrases 4, 5 et 6 et art. 28-1 (VT)
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
