--- a/01. PARTIE LEGISLATIVE/Article L1214-21 - 23086078.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-21 - 23086078.md
@@ -1,17 +1,17 @@
 # Article L1214-21
 
-En cas d'extension d'un périmètre de transports urbains :
+En cas d'extension du ressort territorial de l'autorité organisatrice de la mobilité :
 
 1° Le plan de déplacements urbains approuvé continue de produire ses effets sur le périmètre antérieur ;
 
 2° L'élaboration du plan de déplacements urbains dont le projet a été arrêté peut être conduite à son terme sur le périmètre
-antérieur par l'autorité organisatrice des transports urbains.
+antérieur par l'autorité organisatrice de la mobilité.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-2-2 (VT), alinéas 1 à 3
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Codifié par**:
 
