--- a/01. PARTIE LEGISLATIVE/Article L1214-22 - 23086058.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-22 - 23086058.md
@@ -1,18 +1,19 @@
 # Article L1214-22
 
-En cas de modification d'un périmètre de transports urbains concerné par l'obligation d'élaboration d'un plan de déplacements
-urbains prévue par l'article L. 1214-3, l'autorité organisatrice des transports urbains est tenue d'élaborer un plan de
-déplacements urbains dans un délai fixé par voie réglementaire. A défaut, l'autorité administrative compétente de l'Etat peut
-engager ou poursuivre les procédures nécessaires à son élaboration dans les conditions prévues à la présente sous-section. 
+En cas de modification du ressort territorial d'une autorité organisatrice de la mobilité concernée par l'obligation
+d'élaboration d'un plan de déplacements urbains prévue par l'article L. 1214-3, cette autorité est tenue d'élaborer un plan
+de déplacements urbains dans un délai fixé par voie réglementaire. A défaut, l'autorité administrative compétente de l'Etat
+peut engager ou poursuivre les procédures nécessaires à son élaboration dans les conditions prévues à la présente sous-
+section. 
 
 Toutefois, s'il n'est pas porté atteinte à son économie générale, le plan de déplacements urbains peut être modifié à
-l'initiative de l'autorité organisatrice des transports urbains selon la procédure simplifiée définie à l'article L. 1214-23.
+l'initiative de l'autorité organisatrice de la mobilité  selon la procédure simplifiée définie à l'article L. 1214-23.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-2-2 (VT), alinéas 4 et 5
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
@@ -21,7 +22,7 @@ l'initiative de l'autorité organisatrice des transports urbains selon la procé
 
 	**Cite**:
 
-	  - Code des transports - art. L1214-3 (VD)
+	  - Code des transports - art. L1214-3 (V)
 
 	**Codifié par**:
 
