--- a/01. PARTIE LEGISLATIVE/Article L1214-6 - 23086174.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-6 - 23086174.md
@@ -1,14 +1,14 @@
 # Article L1214-6
 
 Les décisions prises par les autorités chargées de la voirie et de la police de la circulation ayant des effets sur les
-déplacements dans le périmètre de transports urbains sont compatibles ou rendues compatibles avec le plan de déplacements
-urbains.
+déplacements dans le ressort territorial de l'autorité organisatrice de la mobilité  sont compatibles ou rendues compatibles
+avec le plan de déplacements urbains.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-2 (M), alinéa 4, phrase 2
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
