--- a/01. PARTIE LEGISLATIVE/Article L1231-1 - 23085805.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-1 - 23085805.md
@@ -1,11 +1,11 @@
 # Article L1231-1
 
-Dans les périmètres de transports urbains, les communes, leurs groupements, la métropole de Lyon et les syndicats mixtes de
-transport sont les autorités compétentes pour organiser la mobilité. 
+Dans  leur ressort territorial, les communes, leurs groupements, la métropole de Lyon et les syndicats mixtes de transport
+sont les autorités compétentes pour organiser la mobilité. 
 
 Ces autorités sont des autorités organisatrices de transport au sens de l'article L. 1221-1. A ce titre, dans les conditions
-générales énoncées au présent chapitre, elles organisent les services réguliers de transport public urbain de personnes et
-peuvent organiser des services de transport à la demande. 
+générales énoncées au présent chapitre, elles organisent des services réguliers de transport public  de personnes et peuvent
+organiser des services de transport à la demande. 
 
 Elles concourent au développement des modes de déplacement terrestres non motorisés et des usages partagés des véhicules
 terrestres à moteur. 
@@ -22,7 +22,7 @@ logistique urbaine.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2014-1543 du 19 décembre 2014 - art. 20
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
