--- a/01. PARTIE LEGISLATIVE/Article L1231-2 - 23085790.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-2 - 23085790.md
@@ -1,9 +1,24 @@
 # Article L1231-2
 
-Les services mentionnés à l'article L. 1231-1 concernent les transports routiers, fluviaux et maritimes et, sur les réseaux
-relevant de la compétence des autorités organisatrices, les transports ferroviaires et guidés.
+I.-Les services de transport public de personnes mentionnés à l'article L. 1231-1 peuvent être urbains ou non urbains. 
+
+Lorsqu'ils sont urbains, ces services concernent les transports routiers, fluviaux et maritimes et, sur les réseaux relevant
+de la compétence des autorités organisatrices de la mobilité, les transports ferroviaires ou guidés. 
+
+II.-En matière de transport public régulier de personnes routier ou guidé est considéré comme un service de transport urbain
+tout service de transport de personnes exécuté de manière non saisonnière dans le ressort territorial d'une autorité
+organisatrice de la mobilité définie à l'article L. 1231-1 : 
+
+1° Au moyen de véhicules de transport guidé au sens de l'article L. 2000-1 ; 
+
+2° Ou au moyen de tout véhicule terrestre à moteur, à l'exception des autocars, et dont l'espacement moyen des arrêts et la
+variation de la fréquence de passage satisfont des critères définis par décret.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
@@ -15,7 +30,8 @@ relevant de la compétence des autorités organisatrices, les transports ferrovi
 
 	**Cite**:
 
-	  - Code des transports - art. L1231-1 (VD)
+	  - Code des transports - art. L1231-1 (V)
+	  - Code des transports - art. L2000-1 (V)
 
 	**Codifié par**:
 
