--- a/01. PARTIE LEGISLATIVE/Article L1231-8 - 23085757.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-8 - 23085757.md
@@ -1,9 +1,8 @@
 # Article L1231-8
 
-Dans les périmètres de transports urbains inclus dans les agglomérations de plus de 100 000 habitants mentionnées au deuxième
-alinéa de l'article L. 221-2 du code de l'environnement ou recoupant celles-ci, les autorités organisatrices du transport
-public de personnes élaborent des outils d'aide aux décisions publiques et privées ayant un impact sur les pratiques de
-mobilité à l'intérieur du périmètre de transports urbains et sur les déplacements à destination ou au départ de ceux-ci. 
+Les autorités organisatrices de la mobilité dont les ressorts territoriaux sont inclus dans les agglomérations de plus de 100
+000 habitants mentionnées au deuxième alinéa de l'article L. 221-2 du code de l'environnement ou recoupant celles-ci
+élaborent des outils d'aide aux décisions publiques et privées ayant un impact sur les pratiques de mobilité.
 
 Elles établissent un compte relatif aux déplacements dont l'objet est de faire apparaître, pour les différentes pratiques de
 mobilité dans l'agglomération et dans son aire urbaine, les coûts pour l'usager et ceux qui en résultent pour la
@@ -18,13 +17,13 @@ générant des flux de déplacements importants.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 27-1 (VT), art. 46, alinéa 2, ecqc l'article 27-1
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
-	  - Code de l'environnement - art. L221-2 (V)
+	  - Code de l'environnement - art. L221-2
 
 	**Cité par**:
 
