--- a/01. PARTIE LEGISLATIVE/Article L1811-2 - 23084912.md
+++ b/01. PARTIE LEGISLATIVE/Article L1811-2 - 23084912.md
@@ -1,11 +1,9 @@
 # Article L1811-2
 
 Pour l'application des articles L. 1214-1 à L. 1214-10, 
-L. 1214-14 à L. 1214-28, L. 1214-30 à L. 1214-35, L. 1231-4 à L. 1231-6, 
-L. 1231-8, L. 1811-1, L. 1851-2, L. 3111-1 à L. 3111-6, 
+L. 1214-14 à L. 1214-28, L. 1214-30 à L. 1214-35, L. 1231-8, L. 1811-1, L. 1851-2, L. 3111-1 à L. 3111-6, 
 L. 3111-12 et L. 3131-1 et des articles L. 5431-2 et L. 5431-3 il peut être désigné, dans les départements et régions
-d'outre-mer, une autorité organisatrice de transports unique, et défini un périmètre unique de transports qui se substitue à
-tous les périmètres de transports urbains existants et couvre l'ensemble du territoire de ces collectivités.
+d'outre-mer, une autorité organisatrice de transports unique compétente sur  l'ensemble du territoire de ces collectivités.
 
 **Liens relatifs à cet article**
 
@@ -15,7 +13,7 @@ tous les périmètres de transports urbains existants et couvre l'ensemble du te
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 34
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
@@ -24,7 +22,7 @@ tous les périmètres de transports urbains existants et couvre l'ensemble du te
 	  - Code des transports - art. L1214-30
 	  - Code des transports - art. L1231-4
 	  - Code des transports - art. L1231-8
-	  - Code des transports - art. L1811-1
+	  - Code des transports - art. L1811-1 (V)
 	  - Code des transports - art. L1851-2
 	  - Code des transports - art. L3111-1
 	  - Code des transports - art. L3111-12
