--- a/01. PARTIE LEGISLATIVE/Article L1851-2 - 23084848.md
+++ b/01. PARTIE LEGISLATIVE/Article L1851-2 - 23084848.md
@@ -1,14 +1,15 @@
 # Article L1851-2
 
 A Saint-Pierre-et-Miquelon, l'autorité administrative compétente de l'Etat, sur proposition du maire ou du président de
-l'établissement public ayant reçu mission d'organiser les transports publics de personnes, peut définir un périmètre de
-transports urbains excluant certaines parties du territoire de la commune.
+l'établissement public ayant reçu mission d'organiser les transports publics de personnes, peut définir le ressort
+territorial de l'autorité organisatrice de la mobilité en excluant certaines parties du territoire de la commune ou des
+communes qui la composent.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 27 (VT), alinéa 2, ecqc Saint-Pierre-et-Miquelon
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
