--- a/01. PARTIE LEGISLATIVE/Article L2121-11 - 23084610.md
+++ b/01. PARTIE LEGISLATIVE/Article L2121-11 - 23084610.md
@@ -1,19 +1,22 @@
 # Article L2121-11
 
-Les collectivités territoriales et les établissements publics mentionnés aux articles L. 2112-2 et L. 2112-4, et les
-syndicats mixtes de transport régis par les articles L. 1231-10 à L. 1231-13 sont compétents pour organiser les services de
-transport de personnes sur leurs réseaux. 
+Les collectivités territoriales et les établissements publics mentionnés à l'article L. 2112-4, et les syndicats mixtes de
+transport régis par les articles L. 1231-10 à L. 1231-13 sont compétents pour organiser les services de transport de
+personnes sur leurs réseaux. 
 
 Dans la région Ile-de-France, les règles relatives aux réseaux ferroviaires et guidés urbains sont fixées par les articles L.
 1241-1 à L. 1241-7.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+
 	**Cite**:
 
-	  - Code des transports - art. L1231-10 (V)
-	  - Code des transports - art. L1241-1 (V)
-	  - Code des transports - art. L2112-2 (V)
+	  - Code des transports - art. L1231-10
+	  - Code des transports - art. L1241-1
 	  - Code des transports - art. L2112-4 (V)
 
 	**Codifié par**:
