--- a/01. PARTIE LEGISLATIVE/Article L3111-4 - 23084000.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-4 - 23084000.md
@@ -1,17 +1,18 @@
 # Article L3111-4
 
-A l'intérieur d'un périmètre de transports urbains, les dessertes locales des services réguliers non urbains sont créées ou
-modifiées en accord avec l'autorité compétente pour l'organisation des transports publics urbains.
+Les dessertes locales des services réguliers non urbains organisés par une autorité organisatrice de transport autre que
+l'autorité organisatrice de la mobilité territorialement compétente sont créées ou modifiées après information de cette
+dernière.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 27 (VT), alinéa 4
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
-	  - Code des transports - art. L1231-9 (VD)
+	  - Code des transports - art. L1231-9 (V)
 
 	**Codifié par**:
 
