--- a/01. PARTIE LEGISLATIVE/Article L3111-6 - 23083996.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-6 - 23083996.md
@@ -1,17 +1,15 @@
 # Article L3111-6
 
-En cas d'application des dispositions de l'article L. 3111-5, les conventions mentionnées à son premier alinéa sont exécutées
-dans les conditions antérieures jusqu'à leur échéance, sauf accord contraire des parties. La substitution d'autorité
-mentionnée à l'article L. 3111-5 n'entraîne aucun droit à résiliation ou à indemnisation. 
-
-Les parties à ces conventions sont informées de cette substitution par l'autorité compétente pour l'organisation des
-transports urbains concernée.
+En cas d'application de l'article L. 3111-5, les conventions mentionnées au deuxième alinéa du même article L. 3111-5 sont
+exécutées dans les conditions antérieures jusqu'à leur échéance, sauf accord contraire des parties. La substitution
+d'autorité mentionnée audit article L. 3111-5 n'entraîne aucun droit à résiliation ou à indemnisation. Les parties à ces
+conventions sont informées de cette substitution par l'autorité organisatrice de la mobilité territorialement compétente.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 27 (VT), alinéas 6 et 7
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Cite**:
 
