--- a/01. PARTIE LEGISLATIVE/Article L5724-2 - 23643843.md
+++ b/01. PARTIE LEGISLATIVE/Article L5724-2 - 23643843.md
@@ -3,19 +3,14 @@
 Les articles L. 5431-2 et L. 5431-3 sont applicables aux transports maritimes réguliers publics de personnes pour la desserte
 de ports ou appontements du littoral. 
 
-La collectivité territoriale organisatrice est celle visée à l'article L. 5431-1 ou, lorsqu'un périmètre de transport urbain
-a été constitué en application des dispositions de la section 1 du chapitre Ier du titre III du livre II de la première
-partie, les autorités mentionnées aux premier et troisième alinéas du même article.
+La collectivité territoriale organisatrice est celle visée à l'article L. 5431-1 ou l'autorité organisatrice de la mobilité
+mentionnée au titre III du livre II de la première partie.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
-
-	**Anciens textes**:
-
-	  - Code des transports - art. L5722-1 (T)
+	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
 
 	**Codifié par**:
 
