--- a/01. PARTIE LEGISLATIVE/Article L6311-1 - 23078204.md
+++ b/01. PARTIE LEGISLATIVE/Article L6311-1 - 23078204.md
@@ -5,11 +5,42 @@ compétent pour créer, aménager et exploiter les aérodromes d'intérêt natio
 décret en Conseil d'Etat ainsi que ceux nécessaires à l'exercice des missions de l'Etat dans les conditions prévues au
 présent livre.
 
+Nonobstant l'article L. 3641-7 et le VII de l'article L. 5217-2 du code général des collectivités territoriales, tout
+aérodrome appartenant à l'Etat qui n'est pas inscrit sur la liste mentionnée au premier alinéa du présent article et qui
+n'est pas nécessaire à l'exercice des missions de l'Etat est transféré à une collectivité territoriale ou à un groupement de
+collectivités territoriales qui en a fait la demande, dans des conditions fixées par décret en Conseil d'Etat. Ce décret
+détermine notamment les modalités de présentation et d'instruction de la demande et, en cas de pluralité de demandes, les
+procédures de concertation avec les candidats et de désignation du bénéficiaire du transfert. 
+
+Sont exclues du transfert les emprises et installations nécessaires pour les besoins de la défense nationale, de la sécurité
+de la circulation aérienne, de la météorologie et de la sécurité civile. 
+
+Lorsque l'aérodrome est exploité par une société concessionnaire, le transfert de l'aérodrome ne peut être prononcé tant que
+l'Etat possède une part du capital de la société concessionnaire. 
+
+Le transfert des biens de l'aérodrome s'opère à titre gratuit et ne donne lieu ni au versement de la contribution prévue à
+l'article 879 du code général des impôts, ni à perception d'impôts, de droits ou de taxes de quelque nature que ce soit. 
+
+La collectivité ou le groupement bénéficiaire du transfert succède à l'Etat dans l'ensemble des droits et obligations à
+l'égard des tiers.
+
+**Nota:**
+
+Aux termes du II de l'article 21 de la loi n° 2015-991 du 7 août 2015, les transferts de compétences prévus au I dudit
+article sont applicables sous réserve de l'entrée en vigueur des dispositions relevant de la loi de finances prévues aux I et
+II de l'article 133 de la même loi.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2004-809 du 13 août 2004 - art. 28 (VT), alinéas 1 et 2, paragraphe 1, compétence de l'Etat pour la création, l'aménagement et l'exploitation de certains aérodromes
+	  - Loi n°2015-991 du 7 août 2015 - art. 21 (V)
+
+	**Cite**:
+
+	  - Code général des impôts, CGI. - art. 879
+	  - Code général des collectivités territoriales - art. L3641-7
+	  - Code général des collectivités territoriales - art. L5217-2 (VD)
 
 	**Codifié par**:
 
