--- a/01. PARTIE LEGISLATIVE/Article L1231-15 - 28530317.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-15 - 28530317.md
@@ -1,17 +1,20 @@
 # Article L1231-15
 
-Le covoiturage est l'utilisation en commun d'un véhicule terrestre à moteur par un conducteur non professionnel et un ou
-plusieurs passagers majeurs pour un trajet commun. En cas d'inexistence, d'insuffisance ou d'inadaptation de l'offre privée,
+Les entreprises d'au moins deux cent cinquante salariés et les collectivités territoriales facilitent, autant qu'il est
+possible, les solutions de covoiturage pour les déplacements entre le domicile et le lieu de travail de leurs salariés et de
+leurs agents. Les autorités mentionnées à l'article L. 1231-1, seules ou conjointement avec d'autres collectivités
+territoriales ou groupements de collectivités intéressés, établissent un schéma de développement des aires de covoiturage
+destinées à faciliter la pratique du covoiturage. En cas d'inexistence, d'insuffisance ou d'inadaptation de l'offre privée,
 les autorités mentionnées à l'article L. 1231-1, seules ou conjointement avec d'autres collectivités territoriales ou
-groupements de collectivités intéressés, peuvent mettre à disposition du public des plates-formes dématérialisées facilitant
-la rencontre des offres et demandes de covoiturage. Elles peuvent créer un signe distinctif des véhicules utilisés dans le
-cadre d'un covoiturage. Dans ce cas, elles définissent au préalable ses conditions d'attribution.
+groupements de collectivités intéressés, peuvent mettre à disposition du public des plates-formes dématérialisées de
+covoiturage pour faciliter la mise en relation de conducteurs et de passagers. Elles peuvent créer un signe distinctif des
+véhicules utilisés dans le cadre d'un covoiturage. Dans ce cas, elles définissent au préalable ses conditions d'attribution.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-58 du 27 janvier 2014 - art. 52
+	  - Loi n°2015-992 du 17 août 2015 - art. 52 (V)
 
 	**Cite**:
 
