--- a/01. PARTIE LEGISLATIVE/Article L1241-1 - 23085735.md
+++ b/01. PARTIE LEGISLATIVE/Article L1241-1 - 23085735.md
@@ -5,16 +5,27 @@ personnes dans la région Ile-de-France, y compris des services de transports pu
 réserve des pouvoirs dévolus à l'Etat en matière de police de la navigation. Lorsqu'ils sont routiers ou guidés, les services
 de transport public réguliers de personnes sont urbains ou non urbains, au sens du II de l'article L. 1231-2. 
 
-Le syndicat peut y organiser des services de transports à la demande. 
+Le syndicat peut y organiser des services de transports à la demande.
 
-En outre, il y assure les missions et y développe les services mentionnés aux articles L. 1231-1, L. 1231-8 et L. 1231-14 à
-L. 1231-16.
+Le syndicat assure les missions et y développe les services mentionnés à l'article L. 1231-8.
+
+Le syndicat peut délivrer un label " auto-partage " aux véhicules affectés à cette activité. A cet effet, il fixe les
+caractéristiques techniques des véhicules au regard, notamment, des objectifs de réduction de la pollution et des gaz à effet
+de serre qu'il détermine et les conditions d'usage de ces véhicules auxquelles est subordonnée la délivrance du label.
+
+Il peut également organiser des services publics de transport de marchandises et de logistique urbaine, d'auto-partage et de
+location de bicyclettes selon les modalités définies aux articles L. 1231-1, L. 1231-14 et L. 1231-16 sous réserve de
+l'inexistence de tels services publics et de l'accord des communes et établissements publics de coopération intercommunale
+sur le ressort territorial desquels le service est envisagé. Quand de tels services existent, le syndicat est saisi pour avis
+en cas de développement ou de renouvellement desdits services.
+
+Le syndicat peut, seul ou conjointement avec des collectivités territoriales ou des groupements de collectivités intéressés,
+en cas d'inexistence, d'insuffisance ou d'inadaptation de l'offre privée, mettre à la disposition du public des plateformes
+dématérialisées facilitant la rencontre des offres et des demandes de covoiturage. Il peut créer un signe distinctif des
+véhicules utilisés dans le cadre d'un covoiturage. Dans ce cas, il définit au préalable les conditions d'attribution du signe
+distinctif.
 
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -43,11 +54,12 @@ L. 1231-16.
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+	  - Loi n°2015-992 du 17 août 2015 - art. 34
 
 	**Cite**:
 
 	  - Code des transports - art. L1231-1 (V)
 	  - Code des transports - art. L1231-14 (V)
+	  - Code des transports - art. L1231-16 (V)
 	  - Code des transports - art. L1231-2 (V)
 	  - Code des transports - art. L1231-8 (V)
