--- a/01. PARTIE LEGISLATIVE/Article L1431-3 - 23630118.md
+++ b/01. PARTIE LEGISLATIVE/Article L1431-3 - 23630118.md
@@ -1,18 +1,18 @@
 # Article L1431-3
 
 Toute personne qui commercialise ou organise une prestation de transport de personnes, de marchandises ou de déménagement
-doit fournir au bénéficiaire de la prestation une information relative à la quantité de dioxyde de carbone émise par le ou
+doit fournir au bénéficiaire de la prestation une information relative à la quantité de gaz à effet de serre émise par le ou
 les modes de transport utilisés pour réaliser cette prestation.
 
 Le champ et les modalités d'application de cette disposition, notamment le calendrier de leur mise en œuvre selon la taille
-des entreprises de transport, les méthodes de calcul des émissions de dioxyde de carbone et la manière dont le bénéficiaire
+des entreprises de transport, les méthodes de calcul des émissions de gaz à effet de serre et la manière dont le bénéficiaire
 de la prestation est informé sont fixés par voie réglementaire.
 
+Les conditions dans lesquelles l'obligation définie au premier alinéa est rendue applicable aux prestations de transport dont
+l'origine ou la destination se situe en dehors du territoire national sont précisées une fois que les dispositions le
+permettant auront été adoptées dans le cadre des organisations européennes et internationales compétentes.
+
 **Liens relatifs à cet article**
-
-	**Créé par**:
-
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
 
 	**Cité par**:
 
@@ -21,3 +21,7 @@ de la prestation est informé sont fixés par voie réglementaire.
 	  - Décret n°2017-639 du 26 avril 2017 (V)
 	  - Code des transports - art. D1431-2 (VD)
 	  - Code des transports - art. D1431-3 (VD)
+
+	**Modifié par**:
+
+	  - Loi n°2015-992 du 17 août 2015 - art. 67
