--- a/01. PARTIE LEGISLATIVE/Article L1214-8-1 - 23086160.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-8-1 - 23086160.md
@@ -1,22 +1,25 @@
 # Article L1214-8-1
 
-A l'occasion de l'élaboration ou de la révision d'un plan de déplacements urbains, il est procédé à l'évaluation des
-émissions évitées de dioxyde de carbone attendues de la mise en œuvre du plan. Au cours de la cinquième année suivant
-l'approbation du plan, il est procédé au calcul des émissions de dioxyde de carbone générées par les déplacements dans le
-territoire couvert par le plan. A compter de 2015, les évaluations et calcul précités portent sur l'ensemble des émissions de
-gaz à effet de serre.
+Des évaluations et des calculs des émissions de gaz à effet de serre et de polluants atmosphériques générées par les
+déplacements à l'intérieur du périmètre de transport urbain sont réalisés à l'occasion de l'élaboration ou de la révision
+d'un plan de déplacements urbains. Les modalités de ces évaluations et de ces calculs sont précisées par le décret prévu à
+l'article L. 1214-13.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28, alinéa 4 (M)
+	  - Loi n°2015-992 du 17 août 2015 - art. 66 (V)
 
 	**Cité par**:
 
 	  - Décret n°2016-753 du 7 juin 2016 (V)
 	  - Code de l'urbanisme - art. L153-30 (VD)
 	  - Code des transports - art. L1214-12 (VD)
+
+	**Cite**:
+
+	  - Code des transports - art. L1214-13 (V)
 
 	**Codifié par**:
 
