--- a/02. PARTIE REGLEMENTAIRE/Article D1112-1 - 28996283.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1112-1 - 28996283.md
@@ -8,7 +8,11 @@ d'autobus, d'autocars ou de tous autres véhicules automobiles ;
 
 2° Les rames des systèmes de transport ferroviaire ou guidé au sens de l'article L. 2000-1 acquis en vue de leur mise en
 service en application des dispositions de l'article L. 1613-1 ou faisant l'objet d'une modification substantielle au sens de
-cette même disposition.
+cette même disposition ; 
+
+3° Les véhicules routiers acquis à l'occasion de la création ou de l'extension de services librement organisés mentionnés à
+l'article L. 3111-17, ou du renouvellement du parc utilisé pour ces services, qu'il s'agisse d'autocars ou de tous autres
+véhicules automobiles.
 
 **Liens relatifs à cet article**
 
@@ -16,15 +20,15 @@ cette même disposition.
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Liens**:
+	**Modifié par**:
 
-	  - DEPLACE: Décret n°2014-1323 du 4 novembre 2014 - art. 1
+	  - Décret n°2015-1170 du 22 septembre 2015 - art. 1
 
 	**Cité par**:
 
 	  - Code des transports - art. D1112-2 (VD)
 	  - Code des transports - art. D1112-3 (V)
-	  - Code des transports - art. D1112-6 (V)
+	  - Code des transports - art. D1112-6 (M)
 	  - Code des transports - art. D1112-7 (V)
 
 	**Cite**:
@@ -32,3 +36,4 @@ cette même disposition.
 	  - Code des transports - art. L1112-3
 	  - Code des transports - art. L1613-1
 	  - Code des transports - art. L2000-1
+	  - Code des transports - art. L3111-17
