--- a/01. PARTIE LEGISLATIVE/Article L2132-3 - 23084517.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-3 - 23084517.md
@@ -1,7 +1,14 @@
 # Article L2132-3
 
-Les propositions, avis et décisions de l'Autorité de régulation des activités ferroviaires sont motivés et rendus publics,
-sous réserve des secrets protégés par la loi.
+Les propositions, avis et décisions de l'Autorité de régulation des activités ferroviaires et routières sont motivés et
+rendus publics, sous réserve des secrets protégés par la loi. Ses rapports sont également rendus publics, dans les mêmes
+conditions.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
@@ -11,7 +18,7 @@ sous réserve des secrets protégés par la loi.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
