--- a/01. PARTIE LEGISLATIVE/Article L2132-4 - 23084513.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-4 - 23084513.md
@@ -1,12 +1,18 @@
 # Article L2132-4
 
-En cas de vacance de la présidence de l'Autorité de régulation des activités ferroviaires pour quelque cause que ce soit ou
-en cas d'empêchement constaté par le collège, les fonctions du président sont provisoirement exercées par le doyen d'âge du
-collège.
+En cas de vacance de la présidence de l'Autorité de régulation des activités ferroviaires et routières pour quelque cause que
+ce soit ou en cas d'empêchement constaté par le collège, les fonctions du président sont provisoirement exercées par le vice-
+président le plus anciennement désigné. 
 
 Le président a qualité pour agir en justice au nom de l'autorité.
 
 A l'exception du président, les membres du collège sont renouvelés par tiers tous les deux ans.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
@@ -16,4 +22,4 @@ A l'exception du président, les membres du collège sont renouvelés par tiers 
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
