--- a/01. PARTIE LEGISLATIVE/Article L2132-5 - 23084511.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-5 - 23084511.md
@@ -1,9 +1,16 @@
 # Article L2132-5
 
-Le président de l'Autorité de régulation des activités ferroviaires et ses deux vice-présidents exercent leurs fonctions à
-plein temps. Leurs fonctions sont incompatibles avec toute activité professionnelle, avec tout mandat électif départemental,
-régional, national ou européen, avec tout emploi public et avec toute détention, directe ou indirecte, d'intérêts dans le
-secteur ferroviaire.
+Le président de l'Autorité de régulation des activités ferroviaires et routières et ses deux vice-présidents exercent leurs
+fonctions à plein temps. Leurs fonctions sont incompatibles avec toute activité professionnelle, avec tout mandat électif
+départemental, régional, national ou européen, avec tout emploi public et avec toute détention, directe ou indirecte,
+d'intérêts dans le secteur ferroviaire, dans le secteur des services réguliers interurbains de transport routier de personnes
+ou dans le secteur des autoroutes.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
@@ -13,7 +20,7 @@ secteur ferroviaire.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
