--- a/01. PARTIE LEGISLATIVE/Article L2135-13 - 23084403.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-13 - 23084403.md
@@ -1,33 +1,47 @@
 # Article L2135-13
 
-Le président de l'Autorité de régulation des activités ferroviaires saisit l'Autorité de la concurrence des abus de position
-dominante et des pratiques entravant le libre exercice de la concurrence dont il a connaissance dans le secteur du transport
-ferroviaire, notamment lorsqu'il estime que ces pratiques sont prohibées par les articles L. 420-1 et L. 420-2 du code de
-commerce. Cette saisine peut être introduite dans le cadre d'une procédure d'urgence, conformément à l'article L. 464-1 du
-même code. Le président peut également la saisir, pour avis, de toute autre question relevant de sa compétence.
+Le président de l'     Autorité de régulation des activités ferroviaires et routières  saisit l'Autorité de la concurrence
+des abus de position dominante et des pratiques entravant le libre exercice de la concurrence dont il a connaissance dans le
+secteur du transport ferroviaire, dans le secteur des services réguliers interurbains de transport routier de personnes ou
+dans le secteur des marchés de travaux, fournitures et services sur le réseau autoroutier concédé, notamment lorsqu'il estime
+que ces pratiques sont prohibées par les articles L. 420-1 et L. 420-2 du code de commerce. Cette saisine peut être
+introduite dans le cadre d'une procédure d'urgence, conformément à l'article L. 464-1 du même code. Le président peut
+également la saisir, pour avis, de toute autre question relevant de sa compétence. 
 
 L'Autorité de la concurrence communique à l'autorité toute saisine entrant dans le champ des compétences de celle-ci. Elle
-peut également saisir l'autorité, pour avis, de toute question relative au secteur du transport ferroviaire. Lorsqu'elle est
-consultée, en application du présent alinéa, par l'Autorité de la concurrence sur des pratiques dont cette dernière est
-saisie dans le secteur du transport ferroviaire, l'autorité joint à son avis, dans le délai imparti, tous les éléments utiles
-à l'instruction de l'affaire qui sont en sa possession.
+peut également saisir l'autorité, pour avis, de toute question relative au secteur du transport ferroviaire, au secteur des
+services réguliers interurbains de transport routier de personnes ou au secteur des autoroutes. Lorsqu'elle est consultée, en
+application du présent alinéa, par l'Autorité de la concurrence sur des pratiques dont cette dernière est saisie dans le
+secteur du transport ferroviaire, le secteur des services réguliers interurbains de transport routier de personnes ou le
+secteur des autoroutes, l'autorité joint à son avis, dans le délai imparti, tous les éléments utiles à l'instruction de
+l'affaire qui sont en sa possession.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 27 (Ab)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cite**:
 
 	  - Code de commerce - art. L420-1
-	  - Code de commerce - art. L464-1 (V)
+	  - Code de commerce - art. L464-1
 
 	**Cité par**:
 
 	  - Code des transports - art. L2331-1 (M)
 	  - Code des transports - art. L2341-1 (M)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
