--- a/01. PARTIE LEGISLATIVE/Article L2135-7 - 23084425.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-7 - 23084425.md
@@ -1,8 +1,7 @@
 # Article L2135-7
 
-La commission des sanctions de l'Autorité de régulation des activités ferroviaires peut sanctionner les manquements qu'elle
-constate de la part d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, d'une entreprise
-ferroviaire ou d'un autre candidat ou de la SNCF, dans les conditions suivantes : 
+La commission des sanctions de l'Autorité de régulation des activités ferroviaires et routières peut sanctionner les
+manquements qu'elle constate dans les conditions suivantes : 
 
 1° En cas de manquement d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, de la SNCF, d'une
 entreprise ferroviaire ou d'un autre candidat aux obligations lui incombant au titre de l'accès au réseau ou de son
@@ -38,15 +37,32 @@ l'entreprise ferroviaire ou un autre candidat ou la SNCF ne s'est pas conformé,
 par le collège de l'autorité en application des articles L. 2134-1 à L. 2134-3 après mise en demeure de remédier au
 manquement constaté restée sans effet ; 
 
-3° En cas de manquement d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, de la SNCF, d'une
-entreprise ferroviaire ou d'un autre candidat, ou d'une autre entreprise exerçant une activité dans le secteur du transport
-ferroviaire aux obligations de communication de documents et d'informations prévues à l'article L. 2135-2 ou à l'obligation
-de donner accès à leur comptabilité, ainsi qu'aux informations économiques, financières et sociales prévues au même article,
-le collège de l'autorité met l'intéressé en demeure de s'y conformer dans un délai que le collège détermine. 
+3° Le collège de l'autorité met l'intéressé en demeure de se conformer à ses obligations, dans un délai que le collège
+détermine, en cas de manquement : 
+
+a) D'un gestionnaire d'infrastructure, d'une entreprise ferroviaire, de la SNCF, d'une entreprise de transport public routier
+de personnes, d'un concessionnaire d'autoroute ou d'une autre entreprise intervenant dans le secteur des transports
+ferroviaires, dans celui des services réguliers interurbains de transport routier de personnes ou dans celui des travaux,
+fournitures et services sur le réseau autoroutier concédé aux obligations de communication de documents et d'informations
+prévues à l'article L. 2135-2 ou à l'obligation de donner accès à leur comptabilité prévue au même article ; 
+
+b) D'une entreprise de transport public routier de personnes, d'une entreprise ferroviaire ou d'une autre entreprise
+intervenant dans le secteur des services réguliers interurbains de transport routier de personnes aux obligations de
+communication d'informations prévues à l'article L. 3111-24 ; 
+
+c) D'un concessionnaire d'autoroute ou d'une entreprise intervenant sur le marché des travaux, fournitures et services sur le
+réseau autoroutier concédé aux obligations de communication d'informations prévues à l'article L. 122-31 du code de la voirie
+routière. 
 
 Lorsque l'intéressé ne se conforme pas à cette mise en demeure dans le délai fixé ou fournit des renseignements incomplets ou
 erronés, le collège de l'autorité peut saisir la commission des sanctions, qui se prononce dans les conditions prévues au 1°
 bis.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
@@ -56,24 +72,31 @@ bis.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
 	  - Loi n°2015-990 du 6 août 2015 - art. 13
 	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 5
 	  - Code de la voirie routière - art. L122-17 (V)
-	  - Code des transports - art. L2132-1 (VD)
+	  - Code des transports - art. L2132-1 (V)
 	  - Code des transports - art. L2132-2 (V)
 	  - Code des transports - art. L2132-8-1 (Ab)
 	  - Code des transports - art. L2331-1 (M)
 	  - Code des transports - art. L2341-1 (M)
 
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
+
 	**Cite**:
 
 	  - Code de commerce - art. L420-1
+	  - Code de commerce - art. L420-5
+	  - Code de la voirie routière - art. L122-31
+	  - Code des transports - art. L2102-1
 	  - Code des transports - art. L2131-7
 	  - Code des transports - art. L2133-3
 	  - Code des transports - art. L2134-1
-	  - Code des transports - art. L2135-2 (V)
+	  - Code des transports - art. L2135-2 (Ab)
+	  - Code des transports - art. L3111-24 (V)
