--- a/01. PARTIE LEGISLATIVE/Article L2132-1 - 23084521.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-1 - 23084521.md
@@ -1,15 +1,25 @@
 # Article L2132-1
 
-L'Autorité de régulation des activités ferroviaires comprend un collège et une commission des sanctions chargée de prononcer
-les sanctions prévues aux articles L. 2135-7 et L. 2135-8. Le collège est composé de sept membres nommés par décret en raison
-de leurs compétences économiques, juridiques ou techniques dans le domaine des services et infrastructures de transport
-terrestre, ou pour leur expertise en matière de concurrence, notamment dans le domaine des industries de réseau. Leur mandat
-est de six ans non renouvelable. 
+L'Autorité de régulation des activités ferroviaires et routières comprend un collège et une commission des sanctions chargée
+de prononcer les sanctions prévues aux articles L. 2135-7 et L. 2135-8. Le collège est composé de sept membres nommés par
+décret en raison de leurs compétences économiques, juridiques ou techniques dans le domaine des services et infrastructures
+de transport terrestre, ou pour leur expertise en matière de concurrence, notamment dans le domaine des industries de réseau.
+Leur mandat est de six ans non renouvelable. 
 
 A l'exception des décisions relatives aux sanctions, les attributions confiées à l'Autorité de régulation des activités
-ferroviaires sont exercées par le collège.
+ferroviaires et routières sont exercées par le collège.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Modifié par**:
 
@@ -17,9 +27,9 @@ ferroviaires sont exercées par le collège.
 
 	**Cité par**:
 
-	  - Code des transports - art. L2132-2 (VD)
+	  - Code des transports - art. L2132-2 (M)
 	  - Code des transports - art. L2132-8-2 (Ab)
 
 	**Cite**:
 
-	  - Code des transports - art. L2135-7 (VD)
+	  - Code des transports - art. L2135-7 (Ab)
