--- a/01. PARTIE LEGISLATIVE/Article L2132-12 - 23084486.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-12 - 23084486.md
@@ -1,31 +1,38 @@
 # Article L2132-12
 
-L'Autorité de régulation des activités ferroviaires dispose de l'autonomie financière. 
+L'Autorité de régulation des activités ferroviaires et routières dispose de l'autonomie financière. 
 
-Elle perçoit le produit du droit fixe établi à l'article L. 2132-13. La loi du 10 août 1922 relative à l'organisation du
-contrôle des dépenses engagées ne lui est pas applicable.
+Elle perçoit le produit du droit fixe établi à l'article L. 2132-13 et des contributions établies aux articles L. 2132-14 et
+L. 2132-15. La loi du 10 août 1922 relative à l'organisation du contrôle des dépenses engagées ne lui est pas applicable. 
 
 L'autorité perçoit, le cas échéant, des rémunérations pour services rendus. 
 
-Le président de l'autorité est ordonnateur des recettes et des dépenses.
+Le président de l'autorité est ordonnateur des recettes et des dépenses. 
 
 L'autorité est soumise au contrôle de la Cour des comptes.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Loi du 10 août 1922 (V)
-	  - Code des transports - art. L2132-13 (V)
-
-	**Anciens textes**:
-
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 21 (Ab), alinéas 1 à 4, paragraphe I
+	  - Loi du 10 août 1922
+	  - Code des transports - art. L2132-13 (VD)
+	  - Code des transports - art. L2132-14 (VD)
 
 	**Cité par**:
 
 	  - Décret n°2010-1023 du 1 septembre 2010 - art. 19 (Ab)
 	  - Décret n°2010-1023 du 1 septembre 2010 - art. 22 (Ab)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Codifié par**:
 
