--- a/01. PARTIE LEGISLATIVE/Article L2132-2 - 23084519.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-2 - 23084519.md
@@ -1,11 +1,18 @@
 # Article L2132-2
 
-Le collège de l'Autorité de régulation des activités ferroviaires adopte et publie un règlement intérieur précisant ses
-modalités d'instruction et de procédure ainsi que ses méthodes de travail. 
+Le collège de l'Autorité de régulation des activités ferroviaires et routières adopte et publie un règlement intérieur
+précisant ses modalités d'instruction et de procédure ainsi que ses méthodes de travail. Le collège décide de la localisation
+des services de l'autorité, en fonction des nécessités de service. 
 
 La commission des sanctions mentionnée à l'article L. 2132-1 adopte et publie un règlement intérieur précisant ses règles
 générales de fonctionnement et les règles de procédure applicables à la procédure de sanction prévue aux articles L. 2135-7
 et L. 2135-8.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
@@ -15,9 +22,9 @@ et L. 2135-8.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L2132-1 (VT)
-	  - Code des transports - art. L2135-7 (VT)
+	  - Code des transports - art. L2132-1 (M)
+	  - Code des transports - art. L2135-7
