--- a/01. PARTIE LEGISLATIVE/Article L2132-7 - 23084505.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-7 - 23084505.md
@@ -3,16 +3,22 @@
 Les deux vice-présidents sont désignés, respectivement, par le président de l'Assemblée nationale et le président du Sénat. 
 
 Le collège comprend au moins un membre nommé en raison de ses compétences économiques, un membre nommé en raison de ses
-compétences juridiques et un membre nommé en raison de ses compétences techniques dans le domaine ferroviaire ou pour son
-expertise en matière de concurrence, notamment dans le domaine des industries de réseau. 
+compétences juridiques et un membre nommé           pour son expertise en matière de concurrence, notamment dans le domaine
+des industries de réseau. 
 
 Les membres autres que le président et les vice-présidents comprennent un nombre égal de femmes et d'hommes. Pour le
 renouvellement des vice-présidents, le membre succédant à une femme est un homme et celui succédant à un homme est une
-femme.  
+femme. 
 
-En cas de vacance d'un siège de membre du collège, il est procédé à son remplacement par une personne de même sexe  pour la
-durée du mandat restant à courir. Sous réserve de l'alinéa précédent, un mandat  exercé pendant moins de deux ans n'est pas
+En cas de vacance d'un siège de membre du collège, il est procédé à son remplacement par une personne de même sexe pour la
+durée du mandat restant à courir. Sous réserve de l'alinéa précédent, un mandat exercé pendant moins de deux ans n'est pas
 pris en compte pour l'application de la règle de non-renouvellement.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
@@ -22,8 +28,7 @@ pris en compte pour l'application de la règle de non-renouvellement.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
-	  - ORDONNANCE n°2015-948 du 31 juillet 2015 - art. 5
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
