--- a/01. PARTIE LEGISLATIVE/Article L2132-8 - 23084503.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-8 - 23084503.md
@@ -2,7 +2,8 @@
 
 Les fonctions des membres du collège autres que celles de président ou de vice-président sont incompatibles avec tout mandat
 électif départemental, régional, national ou européen, et avec toute détention, directe et indirecte, d'intérêts dans le
-secteur ferroviaire. 
+secteur ferroviaire, dans le secteur des services réguliers interurbains de transport routier de personnes ou dans le secteur
+des autoroutes. 
 
 Les membres du collège ne prennent, à titre personnel, aucune position publique sur des sujets relevant de la compétence de
 l'autorité. 
@@ -31,6 +32,12 @@ Au terme de leur mandat, les membres du collège ne peuvent occuper aucune posit
 responsabilité au sein d'aucune des entreprises ou entités entrant dans le champ de la régulation pendant une période
 minimale de trois ans, sous peine des sanctions prévues à l'article 432-13 du code pénal.
 
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
+
 **Liens relatifs à cet article**
 
 	**Codifié par**:
@@ -46,8 +53,7 @@ minimale de trois ans, sous peine des sanctions prévues à l'article 432-13 du 
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
