--- a/01. PARTIE LEGISLATIVE/Article L2135-2 - 23084447.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-2 - 23084447.md
@@ -1,29 +1,46 @@
 # Article L2135-2
 
-Pour l'accomplissement de ses missions, l'Autorité de régulation des activités ferroviaires dispose d'un droit d'accès à la
-comptabilité des gestionnaires d'infrastructure, des exploitants d'installations de service, des entreprises ferroviaires et
-des autres candidats et de la SNCF ainsi qu'aux informations économiques, financières et sociales nécessaires.
+Pour l'accomplissement de ses missions, l'     Autorité de régulation des activités ferroviaires et routières  dispose d'un
+droit d'accès à la comptabilité des gestionnaires d'infrastructure, des exploitants d'installations de service, des
+entreprises ferroviaires et des autres candidats, de la SNCF, des entreprises de transport public routier de personnes et des
+concessionnaires d'autoroutes, ainsi qu'aux informations économiques, financières et sociales nécessaires. 
 
-Elle peut recueillir toutes les informations utiles auprès des services de l'Etat et des autorités organisant des services de
-transport ferroviaire, de l'Etablissement public de sécurité ferroviaire, des gestionnaires d'infrastructure, des exploitants
-d'installations de service, des entreprises ferroviaires et des autres candidats et de la SNCF, ainsi qu'auprès des autres
-entreprises intervenant sur le marché des transports ferroviaires. Elle peut également entendre toute personne dont
-l'audition lui paraît susceptible de contribuer à son information.
+Elle peut recueillir toutes les informations utiles auprès : 
 
-L'Autorité de régulation des activités ferroviaires impartit à l'intéressé un délai raisonnable, qui ne dépasse pas un mois,
-pour la production des informations, des pièces et des documents demandés. Si les circonstances le justifient, elle peut
-autoriser une prorogation de deux semaines, qui peut être portée à un mois lorsque la production de ces informations, pièces
-ou documents nécessite un important travail de rassemblement, traitement ou mise en forme des données concernées. 
+1° Des services de l'Etat et des autorités organisant des services de transport ferroviaire, des services réguliers
+interurbains de transport routier de personnes ainsi que des services et des autorités chargés des relations avec les
+concessionnaires d'autoroutes ; 
+
+2° De l'Etablissement public de sécurité ferroviaire, des gestionnaires d'infrastructure, des entreprises ferroviaires, de la
+SNCF, des entreprises de transport public routier de personnes et des concessionnaires d'autoroutes ; 
+
+3° Des autres entreprises intervenant dans le secteur des transports ferroviaires, dans celui des services réguliers
+interurbains de transport routier de personnes ou dans celui des travaux, fournitures et services sur le réseau autoroutier
+concédé. 
+
+Elle peut également entendre toute personne dont l'audition lui paraît susceptible de contribuer à son information. 
+
+L'     Autorité de régulation des activités ferroviaires et routières  impartit à l'intéressé un délai raisonnable, qui ne
+dépasse pas un mois, pour la production des informations, des pièces et des documents demandés. Si les circonstances le
+justifient, elle peut autoriser une prorogation de deux semaines, qui peut être portée à un mois lorsque la production de ces
+informations, pièces ou documents nécessite un important travail de rassemblement, traitement ou mise en forme des données
+concernées. 
 
 Les agents de l'autorité habilités par le président procèdent aux audits comptables et aux enquêtes nécessaires à
 l'accomplissement des missions confiées à l'autorité. Le président désigne toute personne compétente pour réaliser, le cas
-échéant, un audit comptable ou une expertise.
+échéant, un audit comptable ou une expertise. 
 
-Les enquêtes donnent lieu à procès-verbal. Un double en est transmis dans les cinq jours aux parties intéressées.
+Les enquêtes donnent lieu à procès-verbal. Un double en est transmis dans les cinq jours aux parties intéressées. 
 
 Les agents habilités de l'autorité reçoivent, à leur demande, communication des documents comptables et factures, de toute
 pièce ou document utile, en prennent copie et recueillent, sur convocation ou sur place, les renseignements et justifications
 propres à l'accomplissement de leur mission.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
@@ -33,11 +50,14 @@ propres à l'accomplissement de leur mission.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cité par**:
 
 	  - Code des transports - art. L2131-1 (VT)
 	  - Code des transports - art. L2135-3 (Ab)
-	  - Code des transports - art. L2135-7 (V)
+	  - Code des transports - art. L2135-7 (Ab)
