--- a/01. PARTIE LEGISLATIVE/Article L2341-1 - 23084055.md
+++ b/01. PARTIE LEGISLATIVE/Article L2341-1 - 23084055.md
@@ -1,13 +1,32 @@
 # Article L2341-1
 
-Les dispositions des articles L. 2112-1, L. 2121-10 et L. 2121-11 ne sont pas applicables à Saint-Martin.
+Les dispositions des articles L. 2112-1, L. 2121-10 et L. 2121-11 ne sont pas applicables à Saint-Martin. 
+
+Les articles L. 2132-5, L. 2132-8, 
+L. 2135-1 à L. 2135-3, L. 2135-7 et L. 2135-13 ne sont pas applicables à Saint-Martin en tant qu'ils concernent les
+transports routiers.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
 	**Cite**:
 
-	  - Code des transports - art. L2112-1 (V)
-	  - Code des transports - art. L2121-10 (V)
+	  - Code des transports - art. L2112-1
+	  - Code des transports - art. L2121-10
+	  - Code des transports - art. L2132-5 (VT)
+	  - Code des transports - art. L2132-8 (VT)
+	  - Code des transports - art. L2135-1 (VT)
+	  - Code des transports - art. L2135-13 (VT)
+	  - Code des transports - art. L2135-7 (VT)
 
 	**Codifié par**:
 
