--- a/01. PARTIE LEGISLATIVE/Article L3452-6 - 23083561.md
+++ b/01. PARTIE LEGISLATIVE/Article L3452-6 - 23083561.md
@@ -25,13 +25,31 @@ autorisé équivalent ;
 
 b) L'affichage ou la diffusion de la décision dans les conditions prévues par l'article 131-35 du code pénal ; 
 
-5° Le fait, pour une entreprise de transport routier de marchandises non résidente ou, dans le cas de services occasionnels,
-pour une entreprise de transport de personnes non résidente, d'effectuer, sans y être admise, un transport intérieur dit de
-cabotage au sens des règlements (CE) n° 1072/2009 du Parlement européen et du Conseil du 21 octobre 2009 établissant des
-règles communes pour l'accès au marché du transport international de marchandises par route et (CE) n° 1073/2009 du Parlement
-européen et du Conseil du 21 octobre 2009 établissant des règles communes pour l'accès au marché international des services
-de transport par autocars et autobus. Le tribunal peut, en outre, prononcer la peine complémentaire d'interdiction
-d'effectuer des opérations de transport sur le territoire national pendant une durée d'un an au plus.
+5° Le fait, pour une entreprise de transport routier de marchandises non établie en France ou, dans le cas de services
+occasionnels ou réguliers, pour une entreprise de transport de personnes non établie en France, d'effectuer, sans y être
+admise, un transport intérieur dit de cabotage au sens des règlements (CE) n° 1072/2009 du Parlement européen et du Conseil
+du 21 octobre 2009 établissant des règles communes pour l'accès au marché du transport international de marchandises par
+route et (CE) n° 1073/2009 du Parlement européen et du Conseil du 21 octobre 2009 établissant des règles communes pour
+l'accès au marché international des services de transport par autocars et autobus. Le tribunal peut, en outre, prononcer la
+peine complémentaire d'interdiction d'effectuer des opérations de transport sur le territoire national pendant une durée d'un
+an au plus. 
+
+6° Le fait, pour une entreprise de transport public routier de personnes, établie ou non en France, d'effectuer un transport
+en infraction à l'obligation de déclaration prévue au premier alinéa de l'article L. 3111-18 ou aux interdictions et
+limitations édictées en application du second alinéa du même article L. 3111-18, ou sans respecter les délais mentionnés à
+l'article L. 3111-20. Le tribunal peut, en outre, prononcer la peine complémentaire d'interdiction d'effectuer ou de faire
+effectuer des opérations de transport sur le territoire national pendant une durée maximale d'un an.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
+
+(1) L'intitulé du "règlement (CE) n° 1073/2009 du Parlement européen et du Conseil du 21 octobre 2009 fixant les conditions
+de l'admission des transporteurs non résidents aux transports nationaux de voyageurs par route dans un Etat membre" est
+devenu "règlement (CE) n° 1073/2009 du Parlement et du Conseil du 21 octobre 2009 établissant les règles communes pour
+l'accès au marché international des services de transport par autocars et autobus".
 
 **Liens relatifs à cet article**
 
@@ -46,15 +64,18 @@ d'effectuer des opérations de transport sur le territoire national pendant une 
 
 	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 15
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
 
 	**Cite**:
 
 	  - Code pénal - art. 131-35 (V)
+	  - Code des transports - art. L3111-18 (VD)
+	  - Code des transports - art. L3111-20 (VD)
 	  - Code des transports - art. L3113-1 (V)
 	  - Code des transports - art. L3211-1 (V)
 	  - Code des transports - art. L3411-1 (V)
 	  - Code des transports - art. L3452-1 (V)
+	  - Code des transports - art. L3452-2 (V)
 
 	**Codifié par**:
 
