--- a/01. PARTIE LEGISLATIVE/Article L3452-8 - 23083557.md
+++ b/01. PARTIE LEGISLATIVE/Article L3452-8 - 23083557.md
@@ -1,17 +1,28 @@
 # Article L3452-8
 
-Est puni de 15 000 € d'amende le fait pour l'entreprise ayant commandé des prestations de cabotage routier de marchandises de
-ne pas respecter les dispositions de l'article L. 3421-7.
+Est puni de 15 000 € d'amende :
+
+1° Le fait, pour l'entreprise ayant commandé des prestations de cabotage routier de marchandises, de ne pas respecter
+l'article L. 3421-7 ;
+
+2° Le fait de recourir à une entreprise de transport public routier de personnes pour exécuter des services librement
+organisés mentionnés à l'article L. 3111-17 alors que l'entreprise n'y a pas été autorisée en application des articles L.
+3113-1 et L. 3411-1.
+
+Le tribunal peut, en outre, prononcer la peine complémentaire d'interdiction d'effectuer ou de faire effectuer des opérations
+de transport sur le territoire national pendant une durée maximale d'un an.
+
+**Nota:**
+
+Aux termes du I de l'article 18 de la loi n° 2015-990 du 6 août 2015, ces dispositions entrent en vigueur à une date fixée
+par décret, au plus tard le premier jour du troisième mois suivant la promulgation de la présente loi. Le décret n° 2015-1266
+du 13 octobre 2015 a fixé cette date au 15 octobre 2015.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 39 (M), alinéa 3, paragraphe III
-
-	**Cite**:
-
-	  - Code des transports - art. L3421-7 (V)
+	  - Loi n°2015-990 du 6 août 2015 - art. 6
 
 	**Codifié par**:
 
