--- a/02. PARTIE REGLEMENTAIRE/Article R1241-15 - 28996487.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-15 - 28996487.md
@@ -5,8 +5,8 @@ modalités précisées par la présente sous-section.
 
 Les services mentionnés par les articles L. 1241-1, L. 1241-2 et L. 1241-3 comprennent : 
 
-1° Les services réguliers, qui sont des services offerts à la place dont les itinéraires, les points d'arrêt, les fréquences,
-les horaires et les tarifs sont fixés et publiés à l'avance ; 
+1° Les services publics réguliers, qui sont des services offerts à la place dont les itinéraires, les points d'arrêt, les
+fréquences, les horaires et les tarifs sont fixés et publiés à l'avance ; 
 
 2° Les services publics à la demande de transport routier de personnes définis à l'article 26 du décret n° 85-891 du 16 août
 1985 relatif aux transports urbains de personnes et aux transports routiers non urbains de personnes et au troisième alinéa
@@ -23,20 +23,15 @@ en faveur de catégories particulières d'usagers.
 
 	**Cite**:
 
-	  - Décret n°59-157 du 7 janvier 1959 - art. 1 (V)
-	  - Décret n°85-891 du 16 août 1985 - art. 26 (V)
-	  - Code de l'éducation - art. R213-3 (V)
-	  - Code des transports - art. L1241-1 (V)
-
-	**Anciens textes**:
-
-	  - Décret n°59-157 du 7 janvier 1959 - art. 1, en ce qui concerne l'énumération des services (V)
-	  - Décret n°2005-664 du 10 juin 2005 - art. 10 (Ab)
+	  - Décret n°59-157 du 7 janvier 1959 - art. 1
+	  - Décret n°85-891 du 16 août 1985 - art. 26
+	  - Code de l'éducation - art. R213-3
+	  - Code des transports - art. L1241-1
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1266 du 13 octobre 2015 - art. 4
