--- a/02. PARTIE REGLEMENTAIRE/Article R1241-19 - 28996495.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-19 - 28996495.md
@@ -1,22 +1,18 @@
 # Article R1241-19
 
-Lorsqu'un service régulier ou à la demande de transport routier est situé pour la plus grande partie de son parcours en Ile-
-de-France, et avec l'accord préalable des autorités organisatrices intéressées par la partie du service extérieure à la
-région, le syndicat peut inscrire l'ensemble du service au plan régional de transport.
+Lorsqu'un service public régulier ou à la demande de transport routier est situé pour la plus grande partie de son parcours
+en Ile-de-France, et avec l'accord préalable des autorités organisatrices intéressées par la partie du service extérieure à
+la région, le syndicat peut inscrire l'ensemble du service au plan régional de transport.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 11, alinéa 11, paragraphe III (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1266 du 13 octobre 2015 - art. 4
 
 	**Cité par**:
 
