--- a/02. PARTIE REGLEMENTAIRE/Article R1241-20 - 28996497.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-20 - 28996497.md
@@ -1,19 +1,15 @@
 # Article R1241-20
 
 La création ou la modification, par des autorités organisatrices situées hors de l'Ile-de-France, de dessertes locales
-situées dans le périmètre de cette région et relevant de services de transports routiers réguliers ou à la demande est
-soumise à l'accord préalable du syndicat.
+situées dans le périmètre de cette région et  relevant de services publics de transports routiers réguliers ou à la demande
+est soumise à l'accord préalable du syndicat.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 11, alinéa 12, paragraphe IV (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1266 du 13 octobre 2015 - art. 4
