--- a/02. PARTIE REGLEMENTAIRE/Article R1241-27 - 28996511.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-27 - 28996511.md
@@ -1,24 +1,20 @@
 # Article R1241-27
 
-Les tarifs des services de transports publics réguliers et à la demande, des services de transport de personnes à mobilité
-réduite et des transports publics fluviaux réguliers de personnes sont fixés ou homologués par le Syndicat des transports
-d'Ile-de-France conformément à la convention passée entre le syndicat ou l'autorité organisatrice de proximité et
-l'entreprise de transport, et dans le respect des principes de tarification arrêtés par le syndicat conformément aux
-dispositions du 6° de l'article R. 1241-9.
+Les tarifs des services publics de transports publics réguliers et     à la demande, des services publics de transport de
+personnes à mobilité réduite et des transports publics fluviaux réguliers de personnes sont fixés ou homologués par le
+Syndicat des transports d'Ile-de-France conformément à la convention passée entre le syndicat ou l'autorité organisatrice de
+proximité et l'entreprise de transport, et dans le respect des principes de tarification arrêtés par le syndicat conformément
+aux dispositions du 6° de l'article R. 1241-9.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°59-157 du 7 janvier 1959 - art. 7 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1266 du 13 octobre 2015 - art. 4
 
 	**Cité par**:
 
@@ -27,4 +23,4 @@ dispositions du 6° de l'article R. 1241-9.
 
 	**Cite**:
 
-	  - Code des transports - art. R1241-9 (V)
+	  - Code des transports - art. R1241-9
